<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent">
    <Switch
        android:id="@+id/switch_second_activity_hide_views"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:checked="true"
        android:theme="@style/SwitchStyle"
        android:layout_height="50dp" />

    <android.support.v7.widget.AppCompatCheckBox
        android:layout_below="@+id/switch_second_activity_hide_views"
        android:id="@+id/checkbox_second_activity_deny_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/CheckboxStyle"
        android:checked="true" />

    <RadioGroup
        android:id="@+id/radiogroup_activity_second_text_chooser"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/checkbox_second_activity_deny_hide"
        android:layout_height="wrap_content">
        <RadioButton
            android:text="@string/activity_second_radiobutton_happy_text"
            android:textColor="@color/color_blue_project"
            android:id="@+id/radiobutton_activity_second_happy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:text="@string/activity_second_radiobutton_sad_text"
            android:textColor="@color/color_blue_project"
            android:id="@+id/radiobutton_activity_second_sad_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:text="@string/activity_second_radiobutton_glory_text"
            android:textColor="@color/color_blue_project"
            android:id="@+id/radiobutton_activity_second_glory_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <TextView
        android:id="@+id/textview_activity_second_text_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/radiogroup_activity_second_text_chooser"
        android:textColorHint="@color/color_blue_project"
        android:hint="@string/activity_second_hint_example"
        android:textColor="@color/color_blue_project"
        android:text=""/>

</RelativeLayout>