<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edittext_activity_main_login"
        android:layout_margin="15dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:background="@drawable/project_rounded_circled_blue_6dp"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="14sp"
        android:hint="@string/activity_main_login_field"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/edittext_activity_main_password"
        android:layout_margin="15dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:background="@drawable/project_rounded_circled_blue_6dp"
        android:padding="10dp"
        android:textSize="14sp"
        android:hint="@string/activity_main_password_field"
        android:singleLine="true"
        android:layout_below="@+id/edittext_activity_main_login"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/button_activity_main_transition"
        android:layout_width="200dp"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginBottom="5dp"
        android:background="@drawable/project_rounded_blue_6dp"
        android:text="@string/activity_main_action_login"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />

</RelativeLayout>